Error handling for dind install

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -64,9 +64,10 @@ RUN apt update \
     && apt install -y apt-transport-https dotnet-sdk-6.0  --no-install-recommends
 
 # for Docker-in-Docker
+RUN apt remove -y docker docker-engine docker.io containerd runc || true
+
 RUN apt update \
     && apt install -y gnupg lsb-release  --no-install-recommends \
-    && apt remove docker docker-engine docker.io containerd runc \
     && mkdir -p /etc/apt/keyrings \
     && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
     && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null \
