Add load flag to docker build step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,7 @@ jobs:
           platforms: ${{ matrix.platform }}
           provenance: true
           sbom: true
+          load: true
           build-args: |
             RUNNER_VERSION=${{ steps.output-collector.outputs.output }}
           tags: |
