--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,6 +18,7 @@ jobs:
     strategy:
       matrix:
         path: [docker]
+        platform: [linux/amd64, linux/arm64]
     environment: publish
     runs-on: ubuntu-latest
 
@@ -74,9 +75,10 @@ jobs:
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0
         with:
           context: ./docker
-          push: true
+          push: false
           labels: ${{ steps.meta-docker.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.platform }}
+          load: true
           build-args: |
             RUNNER_VERSION=${{ steps.output-collector.outputs.output }}
           tags: |
