--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,7 @@ jobs:
 
   build-actions-runner-image:
     env:
-      IMAGE_NAME: ${{ github.repository }}/actions-runner
+      IMAGE_NAME: actions-runner
     strategy:
       matrix:
         path: [docker]
