--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -96,7 +96,7 @@ jobs:
 
   build-actions-runner-image:
     env:
-      IMAGE_NAME: actions-runner
+      IMAGE_NAME: collinmcneese/actions-runner
     strategy:
       matrix:
         path: [docker]
