--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,8 @@ jobs:
           labels: ${{ steps.meta-docker.outputs.labels }}
           platforms: ${{ matrix.platform }}
           load: true
+          provenance: false
+          sbom: false
           build-args: |
             RUNNER_VERSION=${{ steps.output-collector.outputs.output }}
           tags: |
@@ -152,6 +154,8 @@ jobs:
           labels: ${{ steps.meta-docker.outputs.labels }}
           platforms: "${{ matrix.os }}/${{ matrix.arch }}"
           load: true
+          provenance: false
+          sbom: false
           build-args: |
             RUNNER_VERSION=${{ steps.output-collector.outputs.output }}
             TARGETOS=${{ matrix.os }}
