--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,6 @@ jobs:
           platforms: |
             linux/amd64
             linux/arm64
-          load: true
           build-args: |
             RUNNER_VERSION=${{ steps.output-collector.outputs.output }}
           tags: |
@@ -81,6 +80,7 @@ jobs:
           echo "imageid: ${{ steps.build-docker.outputs.imageid }}"
 
       - name: docker - Build Attestation
+        continue-on-error: true
         uses: actions/attest-build-provenance@v1
         with:
           subject-name: "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.output-collector.outputs.output }}"
@@ -146,7 +146,6 @@ jobs:
           platforms: |
             linux/amd64
             linux/arm64
-          load: true
           build-args: |
             RUNNER_VERSION=${{ steps.output-collector.outputs.output }}
             RUNNER_CONTAINER_HOOKS_VERSION=0.6.0
@@ -163,6 +162,7 @@ jobs:
           echo "imageid: ${{ steps.build-docker.outputs.imageid }}"
 
       - name: docker - Build Attestation
+        continue-on-error: true
         uses: actions/attest-build-provenance@v1
         with:
           subject-name: "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.output-collector.outputs.output }}"
