--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,6 +18,7 @@ env:
 jobs:
   build-docker-image:
     runs-on: ubuntu-latest
+    environment: publish
     permissions:
       contents: read
       packages: write
@@ -92,6 +93,7 @@ jobs:
     env:
       IMAGE_NAME: collinmcneese/actions-runner
     runs-on: ubuntu-latest
+    environment: publish
     permissions:
       contents: read
       packages: write
@@ -169,6 +171,7 @@ jobs:
     env:
       IMAGE_NAME: collinmcneese/runner-no-dind
     runs-on: ubuntu-latest
+    environment: publish
     permissions:
       contents: read
       packages: write
