--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,12 @@ env:
 
 jobs:
   build-docker-image:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os:
+        - ubuntu-latest
+        - ubuntu-24.04-arm
+    runs-on: ${{ matrix.os }}
     environment: publish
     permissions:
       contents: read
@@ -39,9 +44,6 @@ jobs:
         run: |
           echo Building with Runner version ${{ steps.output-collector.outputs.output }}
           echo ${{ steps.output-collector.outputs.output }} | grep 2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -66,9 +68,6 @@ jobs:
           context: ./docker
           push: true
           labels: ${{ steps.meta-docker.outputs.labels }}
-          platforms: |
-            linux/amd64
-            linux/arm64
           build-args: |
             RUNNER_VERSION=${{ steps.output-collector.outputs.output }}
           tags: |
@@ -92,7 +91,12 @@ jobs:
   build-actions-runner-image:
     env:
       IMAGE_NAME: collinmcneese/actions-runner
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os:
+        - ubuntu-latest
+        - ubuntu-24.04-arm
+    runs-on: ${{ matrix.os }}
     environment: publish
     permissions:
       contents: read
@@ -114,9 +118,6 @@ jobs:
         run: |
           echo Building with Runner version ${{ steps.output-collector.outputs.output }}
           echo ${{ steps.output-collector.outputs.output }} | grep 2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -141,9 +142,6 @@ jobs:
           context: ./actions-runner
           push: true
           labels: ${{ steps.meta-docker.outputs.labels }}
-          platforms: |
-            linux/amd64
-            linux/arm64
           build-args: |
             RUNNER_VERSION=${{ steps.output-collector.outputs.output }}
             RUNNER_CONTAINER_HOOKS_VERSION=0.6.1
@@ -170,7 +168,12 @@ jobs:
   build-runner-no-dind-image:
     env:
       IMAGE_NAME: collinmcneese/runner-no-dind
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os:
+        - ubuntu-latest
+        - ubuntu-24.04-arm
+    runs-on: ${{ matrix.os }}
     environment: publish
     permissions:
       contents: read
@@ -192,9 +195,6 @@ jobs:
         run: |
           echo Building with Runner version ${{ steps.output-collector.outputs.output }}
           echo ${{ steps.output-collector.outputs.output }} | grep 2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -219,9 +219,6 @@ jobs:
           context: ./runner-no-dind
           push: true
           labels: ${{ steps.meta-docker.outputs.labels }}
-          platforms: |
-            linux/amd64
-            linux/arm64
           build-args: |
             RUNNER_VERSION=${{ steps.output-collector.outputs.output }}
             RUNNER_CONTAINER_HOOKS_VERSION=0.6.1
